[gd_scene load_steps=34 format=3 uid="uid://d18diacrdvtui"]

[ext_resource type="Script" path="res://scripts/_enemy_2.gd" id="1_d35ww"]
[ext_resource type="Shader" path="res://resources/shaders/blink.gdshader" id="2_kumpv"]
[ext_resource type="Texture2D" uid="uid://6f6a6xhirqbx" path="res://just_test_sprites/enemy_sprite_sheet_by_bugrasarikaya_dfb98st-fullview.png" id="3_i8poa"]
[ext_resource type="AudioStream" uid="uid://iss0jbbnwst5" path="res://resources/audio/514254__jtn191__footstep4.wav" id="4_ers6g"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7eva5"]
shader = ExtResource("2_kumpv")
shader_parameter/blink_color = Color(0.847898, 0.190086, 1.92523e-07, 1)
shader_parameter/blink_intensity = 0.0

[sub_resource type="AtlasTexture" id="AtlasTexture_466xh"]
atlas = ExtResource("3_i8poa")
region = Rect2(0, 402, 106, 134)

[sub_resource type="AtlasTexture" id="AtlasTexture_pbguv"]
atlas = ExtResource("3_i8poa")
region = Rect2(106, 402, 106, 134)

[sub_resource type="AtlasTexture" id="AtlasTexture_agftx"]
atlas = ExtResource("3_i8poa")
region = Rect2(212, 402, 106, 134)

[sub_resource type="AtlasTexture" id="AtlasTexture_56nnt"]
atlas = ExtResource("3_i8poa")
region = Rect2(318, 402, 106, 134)

[sub_resource type="AtlasTexture" id="AtlasTexture_fmyw7"]
atlas = ExtResource("3_i8poa")
region = Rect2(424, 402, 106, 134)

[sub_resource type="AtlasTexture" id="AtlasTexture_khnh4"]
atlas = ExtResource("3_i8poa")
region = Rect2(530, 402, 106, 134)

[sub_resource type="AtlasTexture" id="AtlasTexture_i0rt2"]
atlas = ExtResource("3_i8poa")
region = Rect2(636, 402, 106, 134)

[sub_resource type="AtlasTexture" id="AtlasTexture_mpv4n"]
atlas = ExtResource("3_i8poa")
region = Rect2(742, 402, 106, 134)

[sub_resource type="AtlasTexture" id="AtlasTexture_gs585"]
atlas = ExtResource("3_i8poa")
region = Rect2(0, 0, 106, 134)

[sub_resource type="AtlasTexture" id="AtlasTexture_ykilf"]
atlas = ExtResource("3_i8poa")
region = Rect2(106, 0, 106, 134)

[sub_resource type="AtlasTexture" id="AtlasTexture_y13cn"]
atlas = ExtResource("3_i8poa")
region = Rect2(212, 0, 106, 134)

[sub_resource type="AtlasTexture" id="AtlasTexture_5o6yk"]
atlas = ExtResource("3_i8poa")
region = Rect2(318, 0, 106, 134)

[sub_resource type="AtlasTexture" id="AtlasTexture_8bt8e"]
atlas = ExtResource("3_i8poa")
region = Rect2(0, 268, 106, 134)

[sub_resource type="AtlasTexture" id="AtlasTexture_wp1e7"]
atlas = ExtResource("3_i8poa")
region = Rect2(106, 268, 106, 134)

[sub_resource type="AtlasTexture" id="AtlasTexture_xf5oi"]
atlas = ExtResource("3_i8poa")
region = Rect2(212, 268, 106, 134)

[sub_resource type="AtlasTexture" id="AtlasTexture_fsde2"]
atlas = ExtResource("3_i8poa")
region = Rect2(318, 268, 106, 134)

[sub_resource type="AtlasTexture" id="AtlasTexture_sa1t3"]
atlas = ExtResource("3_i8poa")
region = Rect2(424, 268, 106, 134)

[sub_resource type="AtlasTexture" id="AtlasTexture_cb1wf"]
atlas = ExtResource("3_i8poa")
region = Rect2(530, 268, 106, 134)

[sub_resource type="AtlasTexture" id="AtlasTexture_k8flf"]
atlas = ExtResource("3_i8poa")
region = Rect2(636, 268, 106, 134)

[sub_resource type="AtlasTexture" id="AtlasTexture_v5i1i"]
atlas = ExtResource("3_i8poa")
region = Rect2(742, 268, 106, 134)

[sub_resource type="AtlasTexture" id="AtlasTexture_l6i4d"]
atlas = ExtResource("3_i8poa")
region = Rect2(848, 268, 106, 134)

[sub_resource type="AtlasTexture" id="AtlasTexture_avtmj"]
atlas = ExtResource("3_i8poa")
region = Rect2(954, 268, 106, 134)

[sub_resource type="AtlasTexture" id="AtlasTexture_cxhpt"]
atlas = ExtResource("3_i8poa")
region = Rect2(1060, 268, 106, 134)

[sub_resource type="AtlasTexture" id="AtlasTexture_svpa4"]
atlas = ExtResource("3_i8poa")
region = Rect2(1166, 268, 106, 134)

[sub_resource type="SpriteFrames" id="SpriteFrames_q67o2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_466xh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pbguv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_agftx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_56nnt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fmyw7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_khnh4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i0rt2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mpv4n")
}],
"loop": false,
"name": &"attack",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gs585")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ykilf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y13cn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5o6yk")
}],
"loop": true,
"name": &"idle",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8bt8e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wp1e7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xf5oi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fsde2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sa1t3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cb1wf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k8flf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v5i1i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l6i4d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_avtmj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cxhpt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_svpa4")
}],
"loop": true,
"name": &"move",
"speed": 7.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_eslu6"]
radius = 246.1

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_q1x38"]
radius = 22.7601
height = 112.445

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_fx1pu"]
radius = 12.6346
height = 112.307

[node name="Enemy2" type="CharacterBody2D"]
scale = Vector2(1.42466, 1.42466)
collision_layer = 2
collision_mask = 6
script = ExtResource("1_d35ww")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_7eva5")
sprite_frames = SubResource("SpriteFrames_q67o2")
animation = &"attack"
autoplay = "idle"

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_eslu6")

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D2" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(0, 7)
shape = SubResource("CapsuleShape2D_q1x38")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 7.01922)
shape = SubResource("CapsuleShape2D_fx1pu")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_ers6g")
bus = &"SFX"

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="AttackArea" to="." method="_on_attack_area_body_exited"]
